--- a/assets/templates/less/layouts/content-block.less
+++ b/assets/templates/less/layouts/content-block.less
@@ -177,6 +177,9 @@
           padding-left: 2px;
           padding-right: 2px;
           text-align: center;
+          vertical-align: top;
+          padding-top: 10px;
+          padding-bottom: 10px;
           
           &:first-child {
             text-align: left;
